# ticketing-system

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  Makefile  cliMinor7.c
server/: CMakeLists.txt  Makefile  svrMinor7.c
